# device-cloud-osal

./: .gitignore  .travis.yml  Android.mk  CMakeLists.txt  COPYING.md  README.md  os.c  os.h  os_types.h
build-sys/: DefineCompilerFlags.cmake  FindLibWebSockets.cmake  FindLog4c.cmake  FindMosquitto.cmake  FindPubSubClient.cmake  FindSQLite3.cmake  generate_header.sh
build-sys/android/: configure_android_build.sh
build-sys/cmake/: BuildSupport.cmake  CodeCoverage.cmake  DefineCompilerFlags.cmake  FindCmocka.cmake  FindJansson.cmake  FindLibuuid.cmake  GitSha.cmake  StripCDefines.cmake  TestSupport.cmake  VersionSupport.cmake  llvm-gcov.py.in  llvm-lcov.py.in  test-case-count.py.in
build-sys/doxygen/: Doxyfile.in  footer.html.in
build-sys/header/: generate_linux.sh  generate_windows.bat  os_h_bot.in  os_h_top.in  os_h_wrap.in
build-sys/vxworks-layer-for-device-cloud-osal/: Makefile  layer.vsbl
build-sys/vxworks-layer-for-device-cloud-osal/lib/: Makefile  vxworks.krnl.mak  vxworks.lib.mak
build-sys/vxworks-osal/: Makefile  layer.vsbl  vxworks_os.h
build-sys/vxworks-osal/lib/: Makefile  vxworks.krnl.mak  vxworks.lib.mak
device-cloud-osal-layer/: Makefile  layer.vsbl
device-cloud-osal-layer/lib/: Makefile  vxworks.krnl.mak
doc/: building.md  building.txt  updating_os_header.md
header/: GenerateHeader.cmake  os_bot.h.in  os_top.h.in  os_wrap.h.in
os/: CMakeLists.txt  os.h.in  os_android.c  os_android.h  os_linux.c  os_posix.c  os_posix.h  os_posix_macros.h  os_posix_nomacros.c  os_posix_wrappers.c  os_posix_wrappers.h  os_vxworks.c  os_vxworks.h  os_win.c  os_win.h  os_win_macros.h  os_win_nomacros.c  os_win_private.h  os_win_wrappers.c  os_win_wrappers.h
os/uuid/: CMakeLists.txt
src/: CMakeLists.txt  GenerateHeader.cmake  os.c  os.h.in  os_android.c  os_android.h  os_linux.c  os_macos.c  os_posix.c  os_posix.h  os_posix_private.h  os_vxworks.c  os_vxworks.h  os_win.c  os_win.h  os_win_private.h
src/uuid/: CMakeLists.txt  gen_uuid.c  randutils.c  uuidP.h
src/vxworks/: os.h
test/: CMakeLists.txt  README.md
test/integration/: CMakeLists.txt  adapters_test.c  env_test.c  run_test.c  service_entry_test.c  time_test.c
test/mock/: CMakeLists.txt
test/src/: CMakeLists.txt
test/test-support/: CMakeLists.txt  test_support.c  test_support.h
test/unit/: CMakeLists.txt
test/unit/mock/: CMakeLists.txt
test/unit/src/: CMakeLists.txt  char_test.c  printf_test.c
uuid/: CMakeLists.txt  all-io.h  c.h  gen_uuid.c
vxworks7-layer-for-device-cloud-osal/: Makefile  layer.vsbl
vxworks7-layer-for-device-cloud-osal/h/: os.h
vxworks7-layer-for-device-cloud-osal/lib/: Makefile  vxworks.krnl.mak  vxworks.lib.mak
